tests222/tests2/test357.out
lli: <stdin>:1:1: error: expected top-level entity
line 6: variable x is not defined
^
